@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon id="plugin.audio.searchmp3mobi"
        name="[I][/I]SearchMP3.mobi"
-       version="0.2.9"
+       version="0.3.0"
        provider-name="The[COLOR tan]Highway[/COLOR]">
   <requires>
   	<import addon="xbmc.python" version="2.0"/>
